more logging changes

--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fd4af542-7e23-497f-b46c-a39e6a6a3c10",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
     "    get_fast_header_info - reads in the user-defined excel sheet contianing fast header info (duh). Deprecated.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir):\n",
+    "    def __init__(self, converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.WARNING):\n",
     "        \"\"\"converted_dirs - list of str\n",
     "            directories containing raw converted TOA5 files. Each directory contains all the data to process from a given site, with no sub-directories. \n",
     "            For example, the following is an acceptable storage format:\n",
@@ -108,7 +108,7 @@
     "#                 \"NF3\": \"NF 3m 10Hz Code\"\n",
     "#         }\n",
     "\n",
-    "        self.make_logger()\n",
+    "        self.make_logger(level)\n",
     "        \n",
     "        # the final headers to use, grouped by site name.\n",
     "        final_headers = {\n",
@@ -170,7 +170,7 @@
     "                                \"converted_path\":Path(converted_dir), \n",
     "                                \"n_files_converted\":None,\n",
     "                                \"rawfile_metadata\":None,\n",
-    "                                \"header_sheet\":header_sheets[site],\n",
+    "#                                 \"header_sheet\":header_sheets[site],\n",
     "                                \"header_metadat\":None,\n",
     "                                \"final_header\":final_headers[site]\n",
     "                               }\n",
@@ -197,42 +197,42 @@
     "        \n",
     "        return\n",
     "    \n",
-    "    def make_logger(self):\n",
-    "        tfmt = logging.Formatter(f'%(levelname)s    %(name)s    %(lineno)d    %(message)')\n",
-    "        thdl = logging.FileHandler('./log/time.log')\n",
+    "    def make_logger(self, level = logging.WARNING):\n",
+    "        tfmt = logging.Formatter(f'%(levelname)s    %(name)s    %(lineno)d    %(message)s')\n",
+    "        thdl = logging.FileHandler('./.time.log')\n",
     "        thdl.setFormatter(tfmt)\n",
-    "        thdl.setLevel(logging.INFO)\n",
+    "        thdl.setLevel(level)\n",
     "        \n",
-    "        ifmt = logging.Formatter(f'%(levelname)s    %(lineno)d    %(message)')\n",
-    "        ihdl = logging.FileHandler('./log/info.log')\n",
+    "        ifmt = logging.Formatter(f'%(levelname)s    %(lineno)d    %(message)s')\n",
+    "        ihdl = logging.FileHandler('./.info.log')\n",
     "        ihdl.setFormatter(ifmt)\n",
-    "        ihdl.setLevel(logging.INFO)\n",
+    "        ihdl.setLevel(level)\n",
     "        \n",
-    "        bfmt = logging.Formatter('%(levelname)s    %(name)s    %(lineno)d    %(message)')\n",
+    "        bfmt = logging.Formatter('%(levelname)s    %(name)s    %(lineno)d    %(message)s')\n",
     "        bhdl = logging.StreamHandler()\n",
     "        bhdl.setFormatter(bfmt)\n",
-    "        bhdl.setLevel(logging.DEBUG)\n",
+    "        bhdl.setLevel(level)\n",
     "        \n",
-    "        gfmt = logging.Formatter('%(levelname)s    %(name)s    %(lineno)d    %(message)')\n",
+    "        gfmt = logging.Formatter('%(levelname)s    %(name)s    %(lineno)d    %(message)s')\n",
     "        ghdl = logging.StreamHandler()\n",
     "        ghdl.setFormatter(gfmt)\n",
-    "        ghdl.setLevel(logging.DEBUG)\n",
+    "        ghdl.setLevel(level)\n",
     "        \n",
     "        tlogger = logging.getLogger(__name__ + 'timer')\n",
     "        tlogger.addHandler(thdl)\n",
-    "        tlogger.setLevel(logging.DEBUG)\n",
+    "        tlogger.setLevel(level)\n",
     "        \n",
     "        ilogger = logging.getLogger(__name__ + 'info')\n",
     "        ilogger.addHandler(ihdl)\n",
-    "        ilogger.setLevel(logging.DEBUG)\n",
+    "        ilogger.setLevel(level)\n",
     "        \n",
     "        blogger = logging.getLogger(__name__ + 'debugger')\n",
     "        blogger.addHandler(bhdl)\n",
-    "        blogger.setLevel(logging.DEBUG)\n",
+    "        blogger.setLevel(level)\n",
     "        \n",
     "        glogger = logging.getLogger(__name__ + 'general')\n",
     "        glogger.addHandler(ghdl)\n",
-    "        glogger.setLevel(logging.DEBUG)\n",
+    "        glogger.setLevel(level)\n",
     "        \n",
     "        self.tlogger = tlogger\n",
     "        self.ilogger = ilogger\n",
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "d9b0c5f5-24d2-4ef3-9e42-088d9005266e",
    "metadata": {},
    "outputs": [],
@@ -638,10 +638,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2646c7f8-7368-40ee-892d-9c76bdd91457",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 1081, in emit\n",
+      "    msg = self.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 925, in format\n",
+      "    return fmt.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 667, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 636, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 436, in format\n",
+      "    return self._format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 432, in _format\n",
+      "    return self._fmt % record.__dict__\n",
+      "ValueError: incomplete format\n",
+      "Call stack:\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/runpy.py\", line 194, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/traitlets/config/application.py\", line 845, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelapp.py\", line 612, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/platform/asyncio.py\", line 199, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/base_events.py\", line 570, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/base_events.py\", line 1859, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/events.py\", line 81, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/ioloop.py\", line 688, in <lambda>\n",
+      "    lambda f: self._run_callback(functools.partial(callback, future))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/ioloop.py\", line 741, in _run_callback\n",
+      "    ret = callback()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 814, in inner\n",
+      "    self.ctx_run(self.run)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 775, in run\n",
+      "    yielded = self.gen.send(value)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 365, in process_one\n",
+      "    yield gen.maybe_future(dispatch(*args))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 268, in dispatch_shell\n",
+      "    yield gen.maybe_future(handler(stream, idents, msg))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 543, in execute_request\n",
+      "    self.do_execute(\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/ipkernel.py\", line 306, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/zmqshell.py\", line 536, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2894, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2940, in _run_cell\n",
+      "    return runner(coro)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3165, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3357, in run_ast_nodes\n",
+      "    if (await self.run_code(code, result,  async_=asy)):\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3437, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-14-b453be093a56>\", line 1, in <module>\n",
+      "    processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.DEBUG)\n",
+      "  File \"<ipython-input-12-0ad739b0c8a5>\", line 77, in __init__\n",
+      "    self.make_logger(level)\n",
+      "  File \"<ipython-input-12-0ad739b0c8a5>\", line 208, in make_logger\n",
+      "    blogger.debug('Created loggers')\n",
+      "Message: 'Created loggers'\n",
+      "Arguments: ()\n",
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 1081, in emit\n",
+      "    msg = self.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 925, in format\n",
+      "    return fmt.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 667, in format\n",
+      "    s = self.formatMessage(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 636, in formatMessage\n",
+      "    return self._style.format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 436, in format\n",
+      "    return self._format(record)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/logging/__init__.py\", line 432, in _format\n",
+      "    return self._fmt % record.__dict__\n",
+      "ValueError: incomplete format\n",
+      "Call stack:\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/runpy.py\", line 194, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/traitlets/config/application.py\", line 845, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelapp.py\", line 612, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/platform/asyncio.py\", line 199, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/base_events.py\", line 570, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/base_events.py\", line 1859, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/asyncio/events.py\", line 81, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/ioloop.py\", line 688, in <lambda>\n",
+      "    lambda f: self._run_callback(functools.partial(callback, future))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/ioloop.py\", line 741, in _run_callback\n",
+      "    ret = callback()\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 814, in inner\n",
+      "    self.ctx_run(self.run)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 775, in run\n",
+      "    yielded = self.gen.send(value)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 365, in process_one\n",
+      "    yield gen.maybe_future(dispatch(*args))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 268, in dispatch_shell\n",
+      "    yield gen.maybe_future(handler(stream, idents, msg))\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\", line 543, in execute_request\n",
+      "    self.do_execute(\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/tornado/gen.py\", line 234, in wrapper\n",
+      "    yielded = ctx_run(next, result)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/ipkernel.py\", line 306, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/ipykernel/zmqshell.py\", line 536, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2894, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2940, in _run_cell\n",
+      "    return runner(coro)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3165, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3357, in run_ast_nodes\n",
+      "    if (await self.run_code(code, result,  async_=asy)):\n",
+      "  File \"/Users/waldinian/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3437, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-14-b453be093a56>\", line 1, in <module>\n",
+      "    processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.DEBUG)\n",
+      "  File \"<ipython-input-12-0ad739b0c8a5>\", line 77, in __init__\n",
+      "    self.make_logger(level)\n",
+      "  File \"<ipython-input-12-0ad739b0c8a5>\", line 208, in make_logger\n",
+      "    blogger.debug('Created loggers')\n",
+      "Message: 'Created loggers'\n",
+      "Arguments: ()\n",
+      "DEBUG    __main__debugger    208    Created loggers\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -652,51 +815,10 @@
       "Outputting data to...\n",
       "/Volumes/TempData/Bretfeld Mario/Chimney-Park-Reprocessing-Sandbox/Alex Work/Bad/Chimney/EC Processing/BB-NF/Fast/Combined/Standardized\n"
      ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Press Enter to confirm \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 25 files for site NF17:\n",
-      "TOA5_9809.CP_BBNF17m_10Hz212_2021_03_12_0000.dat\n",
-      "...\n",
-      "TOA5_9809.CP_BBNF17m_10Hz212_2021_03_12_1200.dat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing 2021-03-12 00:00:00:   0%|          | 0/25 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 25 files for site NF3:\n",
-      "TOA5_10365.CP_EC_BBNF3m_10Hz652_2021_03_12_0000.dat\n",
-      "...\n",
-      "TOA5_10365.CP_EC_BBNF3m_10Hz652_2021_03_12_1200.dat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing 2021-03-12 12:00:00: 100%|██████████| 25/25 [00:20<00:00,  1.22it/s]\n"
-     ]
     }
    ],
    "source": [
-    "processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir)\n",
+    "processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.DEBUG)\n",
     "processor.standardize_fast_files()"
    ]
   },
