improved logging. TODO: add summarization

--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -689,7 +689,7 @@
     }
    ],
    "source": [
-    "processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.DEBUG)\n",
+    "processor = fast_processing_engine(converted_dirs, metadata_fn, file_length, acq_freq, start_time, end_time, site_names, out_dir, level=logging.INFO)\n",
     "processor.standardize_fast_files()"
    ]
   },
